--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-  <input type="file" (change)="onFileSelected($event)" accept=".tif" />
-  <div id="map" style="width: 100%; height: 400px"></div>
+  <button (click)="addSamplePoints()">Add Sample Points</button>
+  <div id="map" style="width: 100vw; height: 100vh"></div>
 </div>
