--- a/projects/gaia-gis/gaia-gis/gaia-gis.component.html
+++ b/projects/gaia-gis/gaia-gis/gaia-gis.component.html
@@ -1,1 +1,4 @@
-<div id="map"></div>
+<div id="map" style="width: 100%; height: 100%"></div>
+<div id="popup" class="ol-popup">
+  <div id="popup-content"></div>
+</div>
