feat: update ngx-gaia-gis integration; modify app component and styles

--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,9 +1,1 @@
-<div>
-  <button (click)="gaiaService.exportGaiaMapToPdf()">export pdf</button>
-  <section style="height: 100vh; width: 100vw">
-    <gaia-gis [options]="settings"></gaia-gis>
-  </section>
-  <div id="popup" class="ol-popup">
-    <div id="popup-content"></div>
-  </div>
-</div>
+<div><gaia-gis [options]="settings"></gaia-gis></div>
